// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ellipse 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly g multiple selection 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly g single selection 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly image 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Replace With..."
      onClick={[Function]}
    >
      <button
        className="btn"
        id="replace_with"
        type="button"
      >
        <ReplaceIcon />
        Replace With...
      </button>
    </div>
    <div
      className="btn-container"
      key="ai_bg_removal"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="bg-removal"
        type="button"
      >
        <svgr-url
          className="icon"
        />
        ai_bg_removal
      </button>
    </div>
    <div
      className="btn-container half"
      key="Trace"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="trace"
        type="button"
      >
        <svgr-url
          className="icon"
        />
        Trace
      </button>
    </div>
    <div
      className="btn-container half"
      key="Grading"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="grading"
        type="button"
      >
        <GrayscaleIcon />
        Grading
      </button>
    </div>
    <div
      className="btn-container half"
      key="Sharpen"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="sharpen"
        type="button"
      >
        <SharpenIcon />
        Sharpen
      </button>
    </div>
    <div
      className="btn-container half"
      key="Crop"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="crop"
        type="button"
      >
        <CropIcon />
        Crop
      </button>
    </div>
    <div
      className="btn-container half"
      key="Bevel"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="bevel"
        type="button"
      >
        <BevelIcon />
        Bevel
      </button>
    </div>
    <div
      className="btn-container half"
      key="Invert"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="invert"
        type="button"
      >
        <svgr-url
          className="icon"
        />
        Invert
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
    <div
      className="btn-container half"
      key="Outline"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="potrace"
        type="button"
      >
        <svgr-url
          className="icon"
        />
        Outline
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile ellipse 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile g multiple selection 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile g single selection 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile image 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="replace_with"
    key="Replace"
    label="Replace"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="potrace"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="grading"
    key="Brightness"
    label="Brightness"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="sharpen"
    key="Sharpen"
    label="Sharpen"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="crop"
    key="Crop"
    label="Crop"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="bevel"
    key="Bevel"
    label="Bevel"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="invert"
    key="Invert"
    label="Invert"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="trace"
    key="Trace"
    label="Trace"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="bg-removal"
    key="BG Removal"
    label="BG Removal"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile line 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile no elements 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
</div>
`;

exports[`should render correctly in mobile path 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="edit_path"
    key="edit_path"
    label="edit_path"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="decompose_path"
    key="Decompose"
    label="Decompose"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="simplify"
    key="simplify"
    label="simplify"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile polygon 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile rect 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="offset"
    key="Offset"
    label="Offset"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile text 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="convert_to_path"
    key="Outline"
    label="Outline"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="weld"
    key="weld_text"
    label="weld_text"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly in mobile use 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="disassemble_use"
    key="Disassemble"
    label="Disassemble"
    onClick={[Function]}
  />
  <ObjectPanelItem
    content={<svgr-url />}
    disabled={false}
    id="array"
    key="Array"
    label="Array"
    onClick={[Function]}
  />
</div>
`;

exports[`should render correctly line 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly no elements 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  />
</div>
`;

exports[`should render correctly path 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="edit_path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="edit_path"
        type="button"
      >
        <PenIcon />
        edit_path
      </button>
    </div>
    <div
      className="btn-container"
      key="Decompose"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="decompose_path"
        type="button"
      >
        <DivideIcon />
        Decompose
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
    <div
      className="btn-container"
      key="simplify"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="simplify"
        type="button"
      >
        <SimplifyIcon />
        simplify
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly polygon 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly rect 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly text 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container"
      key="weld_text"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="weld"
        type="button"
      >
        <TraceIcon />
        weld_text
      </button>
    </div>
    <div
      className="btn-container"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly use 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Disassemble"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="disassemble_use"
        type="button"
      >
        <SeparateIcon />
        Disassemble
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;
